--- a/zadanie-domowe-rwd-materialy/css/responsive.css
+++ b/zadanie-domowe-rwd-materialy/css/responsive.css
@@ -1,4 +1,8 @@
 @media screen and (min-width:1170px) {
+    
+    body, html {
+        height: 100%;
+    }
 
     header {
         width: 100%;
@@ -6,9 +10,8 @@
         background-position: center top;
         background-size: cover;
         background-repeat: no-repeat;
-        background-attachment: scroll;
         position: relative;
-        height: 1128px;
+        height: 100%;
     }
 
     h1, h2 {
@@ -24,27 +27,30 @@
     }
     
     h1 {
-        font-size: 200%;
+        font-size: 300%;
         top: 50%;
     }
     
     h2 {
-        font-size: 300%;
+        font-size: 400%;
         top: 50%;
     }
 }
 
 @media screen and (max-width:1170px) and (min-width:992px) {
+    
+    body, html {
+        height: 100%;
+    }
+    
     header {
         width: 100%;
-        height: 70%;
         background-image: url('../img/man-2.jpg');
         background-position: center top;
         background-size: cover;
         background-repeat: no-repeat;
-        background-attachment: scroll;
         position: relative;
-        height: 500px;
+        height: 70%;
     }
     
     h1, h2 {
@@ -59,27 +65,30 @@
         margin-left: 60%;
     }
     h1 {
-        font-size: 80%;
-        top: 18%;
+        font-size: 150%;
+        top: 25%;
     }
     
     h2 {
-        font-size: 100%;
-        top: 20%;
+        font-size: 180%;
+        top: 30%;
     }
 }
 
 @media screen and (max-width:992px) {
+    
+    body, html {
+        height: 100%;
+    }
+    
     header {
         width: 100%;
-        height: 50%;
         background-image: url('../img/man-1.jpg');
         background-position: center top;
         background-size: cover;
         background-repeat: no-repeat;
-        background-attachment: scroll;
         position: relative;
-        height: 350px;
+        height: 50%;
     }
     
     h1, h2 {
@@ -94,12 +103,12 @@
     }
     
     h1 {
-        font-size: 80%;
+        font-size: 150%;
         top: 110%;
     }
     
     h2 {
-        font-size: 100%;
+        font-size: 200%;
         top: 110%;
     }
 }
