--- a/paralax/css/style.css
+++ b/paralax/css/style.css
@@ -12,6 +12,11 @@ html {
     display: block;
 }
 
+p {
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
 .wnetrze1 {
     height: 100%;
     background-color: white;
