--- a/angular5-example-app-master/src/app/calculator/calculator/calculator.component.html
+++ b/angular5-example-app-master/src/app/calculator/calculator/calculator.component.html
@@ -3,7 +3,7 @@
         <form class="calc">
             <table>
                 <p class="calc-display">
-                    <input type="text" name="output" id="res" value="{{output}}" class="calc-display-input">
+                    <input type="text" name="output" id="res" value="{{output}}" class="calc-display-input" disabled>
                 </p>
                 <p class="operators">
                     <button type="button" class="calc-button calc-button-gren calc-button-big"
