--- a/moje-portfolio-bootstrap/css/style.css
+++ b/moje-portfolio-bootstrap/css/style.css
@@ -78,7 +78,7 @@ span {
 
 #main-header {
     height: 100vh;
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('../img/header-background.jpg') no-repeat;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.)), url('../img/header-background.jpg') no-repeat;
     background-size: cover;
     position: relative;
 }
